fix: IncludeSourceRevisionInInformationalVersion false

--- a/ExtremeRoles/ExtremeRoles.csproj
+++ b/ExtremeRoles/ExtremeRoles.csproj
@@ -12,6 +12,7 @@
     <ProduceReferenceAssembly>True</ProduceReferenceAssembly>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugType>embedded</DebugType>
+    <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
   </PropertyGroup>
 
   <ItemGroup>
